@@ -22,9 +22,9 @@
 ?>
 <?php
 
-$gallery->version = '1.6-svn-b1-j29-UNSTABLE';
+$gallery->version = '1.6-svn-b1-j30-UNSTABLE';
 $gallery->config_version = 97;
-$gallery->album_version = 37;
+$gallery->album_version = 38;
 $gallery->user_version = 6;
 $gallery->url = "http://gallery.sourceforge.net";
 
