@@ -1,3 +1,11 @@
+2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j30-UNSTABLE
+
+ * CHANGE: 
+	Move index of highlight into albumdata.
+	So we dont need to go through the complete album.
+
+	Album-Version bump.
+
 2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j29-UNSTABLE
 
  * Layout:
